# astroView

./: .gitignore  README.md  hello.txt  pyproject.toml  requirements.txt  testing_code_notebook.ipynb
AstroView.egg-info/: PKG-INFO  SOURCES.txt
astroView/: main.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  main.doctree  viewer.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js  viewer.html
docs/_build/html/_sources/: index.rst.txt  main.rst.txt  viewer.rst.txt
example_notebook/: AstroView_example (1).ipynb  AstroView_example (2).ipynb  AstroView_example.ipynb
test/: test_main.py
tests/: test_main.py
