[project]
name = "AstroView"
version = "0.1.1"
description = "A tool for visualizing asteroid orbits and sky positions using Skyfield, Astroquery, Plotly, and Matplotlib."
authors = [
    { name="Thara Caba", email="tharacaba@gmail.com" } {name="Nikoo Hosseininezhad", email="nikoohn1996@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "skyfield>=1.45",
    "astroquery>=0.4.7",
    "astropy>=5.0",
    "numpy>=1.22",
    "plotly>=5.0",
    "matplotlib>=3.5",
]
