[project]
name = "AstroView"
version = "0.1.2"
description = "A tool for visualizing asteroid orbits and sky positions using Skyfield, Astroquery, Plotly, and Matplotlib."
authors = [
    { name="Thara Caba", email="tharacaba@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

dependencies = [
    "skyfield>=1.45",
    "astroquery>=0.4.7",
    "astropy>=5.0",
    "numpy>=1.22",
    "plotly>=5.0",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
include = ["astroView"]
